~Fixed banner logo alignment

--- a/anime_galaxy_r/src/components/sass/base.sass
+++ b/anime_galaxy_r/src/components/sass/base.sass
@@ -73,9 +73,13 @@ a
 .page-header
 	background-color: $background-color
 
+.banner-logo-container
+	height: 100%
+	display: inline-block
+
 .banner-logo
-	height: 70%
-	margin-left: 23px
+	height: 100%
+	margin-left: calc(-12% + 23px)
 
 .container
 	position: relative
